
2012-02-12
- doc/status.txt: Updated to reflect implementation of TT & Falcon xbios
  video calls. (RFB)
- desk/deskact.c desk/deskconf.h desk/deskwin.c: Code cleanup: centralised
  #define for LEN_FNODE. (RFB)

2012-02-14
- Makefile: Do not build makefile.dep when building the tools. (VRI)
- Makefile: Replaced the obsolete -W option by the new -Wextra. (VRI)
- Makefile: Removed desk/desk_rsc.[ch] and enabled the ERD tool. (VRI)
- tools/erd.c: Made *_rs_trees and *_rs_fstr const to move them to the TEXT
  segment. (VRI)

2012-02-16
- bios/screen.c bios/screen.h: Created new function to be called by
  screen resolution change processing. (RFB)
- Makefile aes/geminit.c desk/deskmain.c desk/deskrez.c desk/deskrez.h
  desk/desktop.dfn desk/desktop.rsc: Allow desktop resolution switching
  for TT. (RFB)

2012-02-19
- bios/machine.c: In the _SND cookie, remove SND_16BIT and SND_MATRIX until
  the Falcon XBIOS sound functions are implemented. (VRI)

2012-02-20
- bios/screen.c bios/screen.h: Improve calculation of Falcon VRAM size in
  preparation for Falcon resolution switching. (RFB)

2012-02-21
- po/fr.po: Fixed leading capital letter in menus sort items. (VRI)
- bios/initinfo.c: Allow the user to bypass the welcome screen by quickly
  tapping the Shift key. (VRI)

2012-02-23
- bios/screen.c bios/screen.h: Made code that fixes up Falcon video modes
  into a function. (RFB)
- bios/screen.h: Restore correct mode code for Falcon ST High. (RFB)

2012-02-24
- bios/screen.c: Falcon fix: STe palette was not always updated when it
  should have been. (RFB)

2012-02-29
- bios/screen.c: Fixed bugs in set_videl_vga() including using the wrong
  palette. (RFB)
- aes/geminit.c desk/deskmain.c desk/deskrez.c desk/desktop.dfn
  desk/desktop.rsc include/xbiosbind.h: Allow desktop resolution switching
  for Falcon. (RFB)
- doc/reschange.txt: Added documentation on resolution change. (RFB)
- aes/gemobed.c: Fixed form_center() to accurately centre the form, as
  per Atari TOS. (RFB)