@@ -23,6 +23,7 @@
 #include "ikbd.h"
 #include "midi.h"
 #include "mfp.h"
+#include "machine.h"
 #include "screen.h"
 #include "sound.h"
 #include "floppy.h"
@@ -815,10 +816,25 @@ static WORD xbios_2e(WORD op, WORD start, WORD count, PTR buffer)
 
 
 /*
- * xbios_40 - (blitmode) 
+ * xbios_40 - (Blitmode)
+ *
+ * this is a minimalist implementation: we ignore any requests to use
+ * the blitter, we just return hardware status
  */
+#if CONF_WITH_BLITTER
+static WORD blitmode(WORD mode)
+{
+    return has_blitter ? 0x0002 : 0x0000;
+}
 
-/* unimplemented */
+#if DBG_XBIOS
+static WORD xbios_40(WORD mode)
+{
+    kprintf("XBIOS: Blitmode\n");
+    return blitmode(mode);
+}
+#endif
+#endif
 
 /*
  * TT video
@@ -1030,7 +1046,11 @@ const PFLONG xbios_vecs[] = {
     xbios_unimpl,   /* 3d */
     xbios_unimpl,   /* 3e */
     xbios_unimpl,   /* 3f */
-    xbios_unimpl,   /* 40 blitmode */
+#if CONF_WITH_BLITTER
+    VEC(xbios_40, blitmode),  /* 40 */
+#else
+    xbios_unimpl,   /* 40 */
+#endif
 #if TOS_VERSION >= 0x200
     xbios_unimpl,   /* 41 */
     xbios_unimpl,   /* 42 */
